Delete user by id
